--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "js"
   ],
   "author": "sannikay",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
+  }
 }
