--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "author": "sannikay",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "chai": "^4.1.2",
     "mocha": "^4.0.1"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1"
   }
 }
