--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "raindrops",
   "main": "src/main.js",
   "scripts": {
-    "test": "mocha tests/test.js"
+    "test": "mocha  --compilers js:babel-core/register --reporter spec --timeout 5000"
   },
   "keywords": [
     "TTD",
