--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sannikay",
   "version": "1.0.0",
   "description": "raindrops",
-  "main": "src/main.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "mocha  --compilers js:babel-core/register --reporter spec --timeout 5000"
   },
